# mnist

./: .Dockerfile.swp  Dockerfile  README.md  pyproject.toml  run.sh
note/: Untitled.ipynb  Untitled1.ipynb  mnist240924.keras:Zone.Identifier
src/mnist/: .main.py.swp  db.py  main.py  worker.py  workflow
